# squiggle

./: Cargo.toml
.cursor/plans/: create_text_tool_67f2b148.plan.md  image_features_185810db.plan.md  select_tool_edit_mode_88dd4fbe.plan.md
rust-version/: Cargo.toml
rust-version/src/: app.rs  assets.rs  camera.rs  editor.rs  feature.rs  feature_id.rs  shape_canvas.rs  tool_store.rs
rust-version/src/tools/: mod.rs  select.rs
rust-version/src/tools/select/: moving_fsm.rs  selection_fsm.rs
squiggle_flutter/: README.md  pubspec.yaml
squiggle_flutter/lib/: main.dart
squiggle_flutter/lib/app/: app_shell.dart
squiggle_flutter/lib/document_library/: document_library_page.dart
squiggle_flutter/lib/editor/: editor.dart
squiggle_flutter/lib/models/: camera.dart  document.dart  document_info.dart  feature.dart  feature_geometry.dart  feature_id.dart  feature_id.freezed.dart  feature_layout.dart  font_size_preset.dart  stroke_width_preset.dart  text_alignment.dart  text_feature_placement.dart
squiggle_flutter/lib/repositories/: document_library_repository.dart  document_repository.dart  document_storage.dart  image_repository.dart  selection.dart  (+3 more)
squiggle_flutter/linux/: CMakeLists.txt
squiggle_flutter/test/: widget_test.dart
squiggle_flutter/web/: index.html  manifest.json
squiggle_flutter/windows/: CMakeLists.txt
src/: app.rs  camera.rs  canvas_interaction.rs  colors.rs  document.rs  editor.rs  feature.rs  fps_counter.rs  main.rs  shape_canvas.rs  tool.rs  tool_store.rs  toolbar.rs
src/tools/: create_feature.rs  create_rect.rs  mod.rs  select.rs
(+121 files in other folders)
