[package]
name = "gpui-example"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0.98"
rust-embed = "8.7.0"
serde = { version = "1.0.228", features = ["derive"] }
schemars = "1.2.1"
rand = "0.10.1"

